fixed description alignment

--- a/javascript-job-search-mvp/css/styles.css
+++ b/javascript-job-search-mvp/css/styles.css
@@ -407,6 +407,7 @@ li a {
 	font-weight: 400;
 	line-height: 29px;
 	margin: 0 0 10px;
+	text-align: left;
 }
 
 p {
